packagelon com.twittelonr.follow_reloncommelonndations.modelonls

import com.twittelonr.follow_reloncommelonndations.common.modelonls.FlowContelonxt
import com.twittelonr.follow_reloncommelonndations.common.modelonls.ReloncelonntlyelonngagelondUselonrId
import com.twittelonr.follow_reloncommelonndations.logging.thriftscala.OfflinelonDisplayContelonxt
import com.twittelonr.follow_reloncommelonndations.logging.{thriftscala => offlinelon}
import com.twittelonr.follow_reloncommelonndations.{thriftscala => t}
import scala.relonflelonct.ClassTag
import scala.relonflelonct.classTag

trait DisplayContelonxt {
  delonf toOfflinelonThrift: offlinelon.OfflinelonDisplayContelonxt
}

objelonct DisplayContelonxt {
  caselon class Profilelon(profilelonId: Long) elonxtelonnds DisplayContelonxt {
    ovelonrridelon val toOfflinelonThrift: OfflinelonDisplayContelonxt =
      offlinelon.OfflinelonDisplayContelonxt.Profilelon(offlinelon.OfflinelonProfilelon(profilelonId))
  }
  caselon class Selonarch(selonarchQuelonry: String) elonxtelonnds DisplayContelonxt {
    ovelonrridelon val toOfflinelonThrift: OfflinelonDisplayContelonxt =
      offlinelon.OfflinelonDisplayContelonxt.Selonarch(offlinelon.OfflinelonSelonarch(selonarchQuelonry))
  }
  caselon class Rux(focalAuthorId: Long) elonxtelonnds DisplayContelonxt {
    ovelonrridelon val toOfflinelonThrift: OfflinelonDisplayContelonxt =
      offlinelon.OfflinelonDisplayContelonxt.Rux(offlinelon.OfflinelonRux(focalAuthorId))
  }

  caselon class Topic(topicId: Long) elonxtelonnds DisplayContelonxt {
    ovelonrridelon val toOfflinelonThrift: OfflinelonDisplayContelonxt =
      offlinelon.OfflinelonDisplayContelonxt.Topic(offlinelon.OfflinelonTopic(topicId))
  }

  caselon class RelonactivelonFollow(followelondUselonrIds: Selonq[Long]) elonxtelonnds DisplayContelonxt {
    ovelonrridelon val toOfflinelonThrift: OfflinelonDisplayContelonxt =
      offlinelon.OfflinelonDisplayContelonxt.RelonactivelonFollow(offlinelon.OfflinelonRelonactivelonFollow(followelondUselonrIds))
  }

  caselon class NuxIntelonrelonsts(flowContelonxt: Option[FlowContelonxt], uttIntelonrelonstIds: Option[Selonq[Long]])
      elonxtelonnds DisplayContelonxt {
    ovelonrridelon val toOfflinelonThrift: OfflinelonDisplayContelonxt =
      offlinelon.OfflinelonDisplayContelonxt.NuxIntelonrelonsts(
        offlinelon.OfflinelonNuxIntelonrelonsts(flowContelonxt.map(_.toOfflinelonThrift)))
  }

  caselon class PostNuxFollowTask(flowContelonxt: Option[FlowContelonxt]) elonxtelonnds DisplayContelonxt {
    ovelonrridelon val toOfflinelonThrift: OfflinelonDisplayContelonxt =
      offlinelon.OfflinelonDisplayContelonxt.PostNuxFollowTask(
        offlinelon.OfflinelonPostNuxFollowTask(flowContelonxt.map(_.toOfflinelonThrift)))
  }

  caselon class AdCampaignTargelont(similarToUselonrIds: Selonq[Long]) elonxtelonnds DisplayContelonxt {
    ovelonrridelon val toOfflinelonThrift: OfflinelonDisplayContelonxt =
      offlinelon.OfflinelonDisplayContelonxt.AdCampaignTargelont(
        offlinelon.OfflinelonAdCampaignTargelont(similarToUselonrIds))
  }

  caselon class ConnelonctTab(
    byfSelonelondUselonrIds: Selonq[Long],
    similarToUselonrIds: Selonq[Long],
    elonngagelondUselonrIds: Selonq[ReloncelonntlyelonngagelondUselonrId])
      elonxtelonnds DisplayContelonxt {
    ovelonrridelon val toOfflinelonThrift: OfflinelonDisplayContelonxt =
      offlinelon.OfflinelonDisplayContelonxt.ConnelonctTab(
        offlinelon.OfflinelonConnelonctTab(
          byfSelonelondUselonrIds,
          similarToUselonrIds,
          elonngagelondUselonrIds.map(uselonr => uselonr.toOfflinelonThrift)))
  }

  caselon class SimilarToUselonr(similarToUselonrId: Long) elonxtelonnds DisplayContelonxt {
    ovelonrridelon val toOfflinelonThrift: OfflinelonDisplayContelonxt =
      offlinelon.OfflinelonDisplayContelonxt.SimilarToUselonr(offlinelon.OfflinelonSimilarToUselonr(similarToUselonrId))
  }

  delonf fromThrift(tDisplayContelonxt: t.DisplayContelonxt): DisplayContelonxt = tDisplayContelonxt match {
    caselon t.DisplayContelonxt.Profilelon(p) => Profilelon(p.profilelonId)
    caselon t.DisplayContelonxt.Selonarch(s) => Selonarch(s.selonarchQuelonry)
    caselon t.DisplayContelonxt.Rux(r) => Rux(r.focalAuthorId)
    caselon t.DisplayContelonxt.Topic(t) => Topic(t.topicId)
    caselon t.DisplayContelonxt.RelonactivelonFollow(f) => RelonactivelonFollow(f.followelondUselonrIds)
    caselon t.DisplayContelonxt.NuxIntelonrelonsts(n) =>
      NuxIntelonrelonsts(n.flowContelonxt.map(FlowContelonxt.fromThrift), n.uttIntelonrelonstIds)
    caselon t.DisplayContelonxt.AdCampaignTargelont(a) =>
      AdCampaignTargelont(a.similarToUselonrIds)
    caselon t.DisplayContelonxt.ConnelonctTab(connelonct) =>
      ConnelonctTab(
        connelonct.byfSelonelondUselonrIds,
        connelonct.similarToUselonrIds,
        connelonct.reloncelonntlyelonngagelondUselonrIds.map(ReloncelonntlyelonngagelondUselonrId.fromThrift))
    caselon t.DisplayContelonxt.SimilarToUselonr(r) =>
      SimilarToUselonr(r.similarToUselonrId)
    caselon t.DisplayContelonxt.PostNuxFollowTask(p) =>
      PostNuxFollowTask(p.flowContelonxt.map(FlowContelonxt.fromThrift))
    caselon t.DisplayContelonxt.UnknownUnionFielonld(t) =>
      throw nelonw UnknownDisplayContelonxtelonxcelonption(t.fielonld.namelon)
  }

  delonf gelontDisplayContelonxtAs[T <: DisplayContelonxt: ClassTag](displayContelonxt: DisplayContelonxt): T =
    displayContelonxt match {
      caselon contelonxt: T => contelonxt
      caselon _ =>
        throw nelonw UnelonxpelonctelondDisplayContelonxtTypelonelonxcelonption(
          displayContelonxt,
          classTag[T].gelontClass.gelontSimplelonNamelon)
    }
}

class UnknownDisplayContelonxtelonxcelonption(namelon: String)
    elonxtelonnds elonxcelonption(s"Unknown DisplayContelonxt in Thrift: ${namelon}")

class UnelonxpelonctelondDisplayContelonxtTypelonelonxcelonption(displayContelonxt: DisplayContelonxt, elonxpelonctelondTypelon: String)
    elonxtelonnds elonxcelonption(s"DisplayContelonxt ${displayContelonxt} not of elonxpelonctelond typelon ${elonxpelonctelondTypelon}")
